# Trainer

./: .gitignore  CMakeLists.txt  Preparefiles.py  Readme.md  RunnerAsigment.sh  dirPrinter.py  preparefiles.py
Assigments/ASG1/: ASG1.cpp  CMakeLists.txt  functions.cpp  functions.h
Assigments/ASG2/: ASG2  ASG2.cpp  functions.cpp  functions.h
Assigments/ASG3/: ASG3.cpp
Assigments/ASG4-strings/: ASG4-strings.cpp
Assigments/ASG5-stringstream/: ASG5  ASG5.cpp
Assigments/ASG6-dynamicarray_vector/: ASG6  ASG6.cpp  CMakeLists.txt
Assigments/ASG7/: ASG7-account_error_handling  ASG7-account_error_handling.cpp  CMakeLists.txt
Assigments/ASG7-account_error_handling/: Account.h
Assignment#1/: CMakeLists.txt
Assignment/Assignment1/: functions.cpp  functions.hpp  main.cpp
Assignment/Assignment10/: main.cpp  naser.txt  w.txt
Assignment/Assignment11/: MathFunctions.cpp  MathFunctions.hpp  functions.hpp  main.cpp
Assignment/Assignment12/: StringSpecializations.hpp  main.cpp
Assignment/Assignment2/: functions.cpp  functions.hpp  main.cpp
Assignment/Assignment3/: CMakeLists.txt  main.cpp
Assignment/Assignment4/: functions.cpp  functions.hpp  main.cpp
Assignment/Assignment5/: functions.cpp  functions.hpp  main.cpp
Assignment/Assignment6/: functions.cpp
Assignment/Assignment7/: Account.cpp  Account.h  Savings.cpp  Savings.h  main.cpp
Assignment/Assignment8/: Account.cpp  Account.h  Checking.cpp  Checking.h  Savings.cpp  main.cpp
Assignment1/Assignment1/: Assignment1.cpp  CMakeLists.txt  math.cpp  math.h
Assignment2/Assignment2/: Assignment2.cpp  CMakeLists.txt  math.cpp  math.h
Assignment3/Assignment3/: Assignment3.cpp  CMakeLists.txt  math.h
Assignment4/Assignment4/: Assignment4.cpp  CMakeLists.txt  Integer.cpp  Integer.h
Assignment5_1_Section08/Assignment5_1_Section08/: Assignment5_1_Section08.cpp  CMakeLists.txt
Assignment5_2_Section08/Assignment5_2_Section08/: Assignment5_2_Section08.cpp  CMakeLists.txt
Assignment5_3_Section08/Assignment5_3_Section08/: Assignment5_3_Section08.cpp  CMakeLists.txt
Assignment6_1_Section09/Assignment6_1_Section09/: Account.cpp  Assignment6_1_Section09.cpp  CMakeLists.txt
Assignment6_2_Section09/Assignment6_2_Section09/: Assignment6_2_Section09.cpp  CMakeLists.txt  Checking.h
Assignment8_1_Section12/Assignment8_1_Section12/: Assignment8_1_Section12.cpp  CMakeLists.txt
Assignment8_3_Section12/Assignment8_3_Section12/: Assignment8_3_Section12.cpp  CMakeLists.txt  specialized_functions.h
Assignment8_4_Section12/Assignment8_4_Section12/: Assignment8_4_Section12.cpp  CMakeLists.txt
Assignment8_5_Section12/Assignment8_5_Section12/: Assignment8_5_Section12.cpp  CMakeLists.txt
Assignments/A1/: A1.sln  main.cpp  math.cpp  math.h
Assignments/A1/A1/: CMakeLists.txt  main.cpp
Assignments/A2/: A2.sln  CMakeLists.txt  main.cpp  math.cpp  math.h
Assignments/A2/A2/: CMakeLists.txt  main.cpp
Assignments/A3/: A3.sln  CMakeLists.txt  main.cpp
Assignments/A3/A3/: CMakeLists.txt
Assignments/A6/: main.cpp
Assignments/A6_1/: functions.cpp  functions.h
Assignments/A6_2/: functions.cpp  functions.h  main.cpp
Assignments/A6_3/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Assignments/A7/: Account.cpp  CMakeLists.txt  main.cpp
Assignments/A7_2/: Checking.cpp  main.cpp
Assignments/A9_1/: CMakeLists.txt  Source.cpp
Assignments/A9_2/: assembly.txt
Assignments/A9_3/: CMakeLists.txt  Source.cpp  functions.h
Assignments/Assignment1/: Assignment1.cpp  math_operations.cpp  math_operations.h
Assignments/Assignment2/: Assignment2.cpp  math_operations.cpp  math_operations.h
Assignments/Assignment3/: Assignment3.cpp
Assignments/Assignment4/: Assignment4.cpp  convert.cpp  convert.h
Assignments/Assignment5/: Assignment5.cpp  search_util.cpp  search_util.h
Point_0/: CMakeLists.txt  Cmakelists.txt
Section02/Assignment1/: Assignment1.cpp  Assignment1.hpp  CMakeLists.txt
Section02/Assignment2/: Assignment2.cpp  CMakeLists.txt
Section02/Assignment3/: Assignment3.cpp
Section02/Assignments/Assignment1/: Assignment1.cpp
Section02/Assignments/Assignment2/: Assignment2.cpp
Section02/Assignments/Assignment3-1/: Assignment3-1.cpp
Section02/Assignments/Assignment3-2/: Assignment3-2.cpp
Section02/Firstprogram/Firstprogram/: Firstprogram
Section03/Memmgmtc/Memmgmtc/: Memmgmtc  Memmgmtc.cpp
Section04/Copyctor/Copyctor01/: Copyctor01.cpp  Integer.cpp
Section05/Ruleoffive/Ruleoffive01/: Integer.h
Section07/Circularref/Circularref/: Circularref  Circularref.cpp
Section07/Morefeatures/Morefeatures/: CMakeLists.txt  Morefeatures.cpp
Section07/Shared_ptr/Shared_ptr/: Shared_ptr.cpp
Section07/Unique_ptr/Unique_ptr/: CMakeLists.txt  Unique_ptr.cpp
Section07/Weak_ptr/Weak_ptr/: Weak_ptr.cpp
Section08/: Section08.cpp
Section08/Assignment1_Sec8/: Assignment1_Sec8.cpp  Assignment1_Sec8.hpp
Section08/Assignment2_Sec8/: Assignment2_Sec8.cpp  Assignment2_Sec8.hpp
Section08/Assignments/Section8_Assignment1/: Section8_Assignment1.cpp
Section08/Assignments/Section8_Assignment2/: Section8_Assignment2.cpp
Section08/Assignments/Section8_Assignment3/: Section8_Assignment3.cpp
Section08/Enums/Enums/: Enums.cpp
Section08/Strings/Strings/: Assignment1  Assignment1._cpp  Assignment2  Assignment2._cpp  Strings  Strings.cpp
Section08/Stringstreams/Stringstreams/: Stringstreams  Stringstreams.cpp
Section08/Vector/Vector/: Vector  (+2 more)
Section11/Assignments/Section11_Assignment1/: CMakeLists.txt  Section11_Assignment1.cpp
Section16/Evaluationorder/: Evaluationorder.cpp
Section16/Featuremacros/: CMakeLists.txt  Featuremacros.cpp
Section16/Inlinevariables/: B.cpp  Inlinevariables.cpp
Section16/Nestednamespaces/: Nestednamespaces.cpp
Section18/Any/: Any.cpp
Section18/Filesystem/: CMakeLists.txt  Filesystem.cpp
Section18/Optional/: Optional.cpp
Section18/Parallel/: CMakeLists.txt  Parallel.cpp
Section18/Variant/: Variant.cpp
assignment#1/Assignment1/: Assignment1.cpp  CMakeLists.txt  math.cpp  math.h
point_0/: .gitignore  point_0.cpp
test/: CMakeLists.txt  function.cpp  test.cpp
(+63 files in other folders)
