cmake_minimum_required(VERSION 3.10)

project(ADASITest)

set(CMAKE_CXX_STANDARD 17) #setting C++ 14 standard

# #finding pkg-config is a helper tool
# find_package(PkgConfig REQUIRED)

# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

add_subdirectory(Section02/Auto/Autokeyword/Autokeyword)
add_subdirectory(Section02/Functionpointers/Functionpointer/Functionpointer)
add_subdirectory(Section02/Defaultfunctionargs/Defaultfunctionargs/Defaultfunctionargs)
add_subdirectory(Section02/Constqualifierandcompoundtypes/Constqualifer/Constqualifer)
add_subdirectory(Section02/Namespace/Namespace/Namespace)
add_subdirectory(Section02/Firstprogram/Firstprogram)
add_subdirectory(Section02/Basicio/Basicio)
add_subdirectory(Section02/Reference/Reference/Reference)
add_subdirectory(Section02/Range-basedfor/Foreach/Foreach)
add_subdirectory(Section02/Inlinefunctions/Inlinefunctions/Inlinefunctions)
add_subdirectory(Section02/Pointers/Pointers/Pointers)
add_subdirectory(Section02/Functionoverloading/Functionoverloading/Functionoverloading)
add_subdirectory(Section02/Refvsptr/Swapfunction/Swapfunction)
add_subdirectory(Section03/Memmgmtc/Memmgmtc)
add_subdirectory(Section04/Class/Car/Carmain)
add_subdirectory(Section04/Copyctor/Copyctor01)
add_subdirectory(Section04/Lvaluesandrvalues/Rvalues/Rvalues)
add_subdirectory(Section04/Movesemanticsimpl/Copyctor-complete/Copyctor02)
add_subdirectory(Section04/Ruleoffive/Ruleoffive)
add_subdirectory(Section04/Static/Carabstraction/Carabstraction)
add_subdirectory(Section04/Defaultanddeletedfunctions/Newclasskeywords/Newclasskeywords)
add_subdirectory(Section04/Structure/Structure/Structure)
add_subdirectory(Section05/Lvaluesandrvalues/Rvalues/Rvalues01)
add_subdirectory(Section05/Movesemanticsimpl/Copyctor-complete/Copyctor04)
add_subdirectory(Section05/Ruleoffive/Ruleoffive01)
add_subdirectory(Section06/Operatoroverloading/Copyctor06)
add_subdirectory(Section06/Userdefconversions/Userdefconversions)
add_subdirectory(Section07/Weak_ptr/Weak_ptr)
add_subdirectory(Section07/Shared_ptr/Shared_ptr)
add_subdirectory(Section07/Circularref/Circularref)
add_subdirectory(Section07/Unique_ptr/Unique_ptr)
add_subdirectory(Section07/Morefeatures/Morefeatures)
add_subdirectory(Section08/Userdefinedliterals/Userdefinedliterals)
add_subdirectory(Section08/Enums/Enums)
add_subdirectory(Section08/Initializer_list/Initializerlist/Initializerlist)
add_subdirectory(Section08/Strings/Strings)
add_subdirectory(Section08/Stringstreams/Stringstreams)
add_subdirectory(Section08/Vector/Vector)
add_subdirectory(Section08/Constexpr/Constexpr/Constexpr)
add_subdirectory(Section09/Account/AccountMain)
add_subdirectory(Section10/Nestedexceptions/Exceptionhandling/Exceptionhandling)
add_subdirectory(Section10/Exceptionsinctors/Exceptionhandlingii/Exceptionhandlingii)
add_subdirectory(Section10/Exceptionhandling-noexcept/Exceptionhandling-noexcept)
add_subdirectory(Section11/Errorhandling/Fileio/Fileio)
add_subdirectory(Section11/Binaryfiles/Fileio-binaryfiles/Fileio-binaryfiles)
add_subdirectory(Section12/Typetraits)
add_subdirectory(Section12/Staticassert)
add_subdirectory(Section12/Perfectforwarding-ii/Perfectforwarding/Perfectforwarding)
add_subdirectory(Section12/Basics/Basics)
add_subdirectory(Section12/Partialspec/Classtemplateparspecializatoin/Classtemplateparspecializatoin)
add_subdirectory(Section12/Classexpspec-ii/Classtemplateexspecialization/Classtemplateexspecialization)
add_subdirectory(Section12/Classtemplates/Classtemplates/Classtemplates)
add_subdirectory(Section12/Aliases/Aliases/Aliases)
add_subdirectory(Section12/Variadictemplates-ii/Variadictemplates/Variadictemplates)
add_subdirectory(Section12.5/Binder/Binder)
add_subdirectory(Section12.5/Function/Function)
add_subdirectory(Section13/Functionobjects/Functionobjects/Functionobjects)
add_subdirectory(Section13/Capturelist/Capturelist/Capturelist)
add_subdirectory(Section13/Lambdabasics/Lambdabasics/Lambdabasics)
add_subdirectory(Section14/Stl/Containerchanges/Containerchanges)
add_subdirectory(Section14/Stl/Sequencecontainers/Sequencecontainers)
add_subdirectory(Section14/Stl/Algorithms/Algorithms)
add_subdirectory(Section14/Stl/Associativecontainers/Associativecontainers)
add_subdirectory(Section14/Stl/Unorderedcontainers/Unorderedcontainers)
add_subdirectory(Section15/Sharingdata/Sharingdata)
add_subdirectory(Section15/Threads/Threads)
add_subdirectory(Section15/Async/Async)
add_subdirectory(Section15/Threadclass/Threadclass)
add_subdirectory(Section15/Promisefuture/Promisefuture)
add_subdirectory(Section16/Structuredbindings)
add_subdirectory(Section16/Mandatorycopyelision)
# add_subdirectory(Section16/Constexprlambda)
add_subdirectory(Section16/Featuremacros)
add_subdirectory(Section16/Evaluationorder)
add_subdirectory(Section16/Attributes)
add_subdirectory(Section16/Noexcept)
add_subdirectory(Section16/Ifswitch)
add_subdirectory(Section16/Nestednamespaces)
add_subdirectory(Section16/Inlinevariables)
add_subdirectory(Section17/Traitssuffixes)
add_subdirectory(Section17/Ifconstexpr)
add_subdirectory(Section17/Foldexpressions)
add_subdirectory(Section17/Ctad)
add_subdirectory(Section18/Filesystem)
add_subdirectory(Section18/Stringview)
add_subdirectory(Section18/Variant)
add_subdirectory(Section18/Any)
add_subdirectory(Section18/Optional)
add_subdirectory(Section18/Parallel)
add_subdirectory(Assignment1/Assignment1)
add_subdirectory(Assignment2/Assignment2)
add_subdirectory(Assignment3/Assignment3)
add_subdirectory(Assignment4/Assignment4)
add_subdirectory(Assignment5_1_Section08/Assignment5_1_Section08)
add_subdirectory(Assignment5_2_Section08/Assignment5_2_Section08)
add_subdirectory(Assignment5_3_Section08/Assignment5_3_Section08)
add_subdirectory(Assignment6_1_Section09/Assignment6_1_Section09)
add_subdirectory(Assignment6_2_Section09/Assignment6_2_Section09)
add_subdirectory(Assignment7_1_Section11/Assignment7_1_Section11)
add_subdirectory(Assignment8_1_Section12/Assignment8_1_Section12)

# add_subdirectory(Section04/Class/Car/Carmain/)
# add_subdirectory(point_1)
# add_subdirectory(point_2_3)
# add_subdirectory(point_4)
# add_subdirectory(point_5)
# add_subdirectory(point_6)

