cmake_minimum_required(VERSION 3.10)

project(CPP_Course)

set(CMAKE_CXX_STANDARD 17) #setting C++ 14 standard

# #finding pkg-config is a helper tool
# find_package(PkgConfig REQUIRED)

# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

add_subdirectory(Assignment1)

# add_subdirectory(Section04/Class/Car/Carmain/)
# add_subdirectory(point_1)
# add_subdirectory(point_2_3)
# add_subdirectory(point_4)
# add_subdirectory(point_5)
# add_subdirectory(point_6)

